# perfect6502

./: CMakeLists.txt  netlist_sim.c
cbmbasic/: CMakeLists.txt
